--- a/app/src/main/res/layout/house_not_found.xml
+++ b/app/src/main/res/layout/house_not_found.xml
@@ -15,33 +15,39 @@
         android:layout_width="match_parent"
         android:layout_height="180dp">
 
-        <ImageView
-            android:id="@+id/img"
-            android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"
-            android:src="@drawable/error_icon"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
 
         <TextView
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_below="@id/check"
             android:id="@id/txt"
             android:textColor="@color/orange"
-            android:textSize="20sp"
+            android:textSize="17sp"
             android:gravity="center_horizontal"
-            android:layout_below="@id/img"
             android:text="@string/house_not_found"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <Button
+            android:textColor="@color/white"
             android:id="@+id/btn"
             android:layout_marginTop="20dp"
             android:layout_marginLeft="40dp"
+            android:layout_marginRight="40dp"
             android:background="@drawable/round_button"
             android:layout_centerHorizontal="true"
             android:layout_below="@id/txt"
             android:text="OK"
             android:layout_width="match_parent"
+            android:layout_height="25dp"/>
+
+        <ImageView
+            android:layout_marginTop="20dp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/check"
+            android:src="@drawable/chekctwo"
+            android:layout_width="50dp"
             android:layout_height="30dp"/>
 
 
