--- a/app/src/main/res/layout/activity_fworker_profile.xml
+++ b/app/src/main/res/layout/activity_fworker_profile.xml
@@ -88,6 +88,7 @@
 
         <EditText
 
+            android:textSize="15sp"
             android:id="@+id/fworker_address_area"
             android:paddingLeft="5dp"
             android:focusableInTouchMode="false"
@@ -96,7 +97,7 @@
             android:layout_marginLeft="20dp"
             android:layout_below="@id/addresstxt"
             android:background="@drawable/round_edittext2"
-            android:layout_width="180dp"
+            android:layout_width="210dp"
             android:layout_height="38dp"/>
 
         <ImageView
@@ -120,7 +121,7 @@
             android:layout_toRightOf="@id/fworker_address_area"
             android:background="@drawable/round_edittext2"
             android:hint="road"
-            android:layout_width="80dp"
+            android:layout_width="60dp"
             android:layout_height="38dp"/>
 
         <EditText
@@ -135,7 +136,7 @@
             android:layout_toRightOf="@id/fworker_address_road"
             android:background="@drawable/round_edittext2"
             android:hint="block"
-            android:layout_width="70dp"
+            android:layout_width="60dp"
             android:layout_height="38dp"/>
 
         <TextView
@@ -177,10 +178,9 @@
             android:layout_height="38dp"/>
 
         <EditText
-
+            android:hint="Phone number"
             android:id="@+id/fworker_phone_edit"
             android:paddingLeft="5dp"
-            android:hint="Phone Number(start with +88) *"
             android:background="@drawable/round_edittext2"
             android:layout_below="@id/fworker_address_housenmbr"
             android:layout_marginTop="20dp"
@@ -332,7 +332,7 @@
 
             android:id="@+id/fworker_uni_edit"
             android:paddingLeft="5dp"
-            android:hint="univesity"
+            android:hint="univesity/college"
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
@@ -342,7 +342,7 @@
             android:layout_height="36dp"/>
 
         <EditText
-
+            android:inputType="textEmailAddress"
             android:id="@+id/fworker_mail_edit"
             android:paddingLeft="5dp"
             android:hint="mail id"
@@ -355,7 +355,7 @@
             android:layout_height="36dp"/>
 
         <EditText
-
+            android:visibility="gone"
             android:id="@+id/fworker_joining_edit"
             android:paddingLeft="5dp"
             android:hint="joining date"
