--- a/app/src/main/res/layout/show_buildinginfo_layout.xml
+++ b/app/src/main/res/layout/show_buildinginfo_layout.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <ImageView
+            android:scaleType="center"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/logo"
             android:id="@+id/house_image"
