--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,8 +12,7 @@
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 
-    <style name="LoginTheme" parent="FirebaseUI">
-        <item name="actionBarItemBackground">@drawable/logo</item>
+    <style name="LoginTheme" parent="Widget.AppCompat.Toolbar">
     </style>
 
 
