show popup while logout and few updates

--- a/app/src/main/res/layout/activity_fworker_profile.xml
+++ b/app/src/main/res/layout/activity_fworker_profile.xml
@@ -368,6 +368,7 @@
             android:layout_height="36dp"/>
 
         <ImageView
+            android:visibility="gone"
             android:id="@+id/calendar_joining"
             android:layout_marginRight="5dp"
             android:src="@drawable/calendarlight"
