--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,36 @@
     <color name="grey">#bfbfbf</color>
     <color name="grey_100">#F5F5F5</color>
     <color name="lightorange">#E76A45</color>
-
+    <color name="grey_300">#E0E0E0</color>
+    <color name="grey_500">#9E9E9E</color>
+    <color name="grey_1000">#6b6b6b</color>
+    <color name="grey_2000">#505152</color>
+    <color name="White">#fff</color>
+    <color name="Grey">#c3c3c3</color>
+    <color name="Black">#000000</color>
+    <color name="osthir">#c3c3c3</color>
+    <color name="osthirdark">#008e76</color>
+    <color name="base">#00b0ff</color>
+    <color name="base_gree">#9fffe0</color>
+    <color name="link_blue">#4d94ff</color>
+    <color name="darkRed">#cc0000</color>
+    <color name="orange2">#F94E03</color>
+    <color name="orange3">#ff643d</color>
+    <color name="orangedark">#ca4a04</color>
+    <color name="golden">#CFE310</color>
+    <color name="lightblue">#10CFE3</color>
+    <color name="majenda">#10E38D</color>
+    <color name="green">#33cc33</color>
+    <color name="majenda_light">#b3ffe7</color>
+    <color name="yellow_light">#ffff99</color>
+    <color name="red_light">#ff5c33</color>
+    <color name="pink_light">#e580ff</color>
+    <color name="blue_light">#b380ff</color>
+    <color name="orange_light">#ffcc80</color>
+    <color name="dark_mode">#303030</color>
+    <color name="car_blue">#338AE9</color>
+    <color name="family_brown">#A66A25</color>
+    <color name="service1">#4FEC62</color>
+    <color name="service_pink">#e580ff</color>
+    <color name="grey_background">#f2f3f5</color>
 </resources>
