--- a/app/src/main/res/layout/activity_fworker_profile.xml
+++ b/app/src/main/res/layout/activity_fworker_profile.xml
@@ -33,8 +33,8 @@
                 <ImageView
                     android:layout_centerInParent="true"
                     android:src="@drawable/logo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"/>
 
             </RelativeLayout>
         </androidx.appcompat.widget.Toolbar>
