--- a/app/src/main/res/layout/activity_update_bldng_info.xml
+++ b/app/src/main/res/layout/activity_update_bldng_info.xml
@@ -33,8 +33,8 @@
                     <ImageView
                         android:layout_centerInParent="true"
                         android:src="@drawable/logo"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_width="100dp"
+                        android:layout_height="40dp"/>
 
                 </RelativeLayout>
             </androidx.appcompat.widget.Toolbar>
@@ -61,7 +61,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="30dp">
+            android:layout_height="37dp">
 
             <TextView
                 android:textColor="@color/lightorange"
@@ -71,13 +71,44 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
             <EditText
+                android:focusableInTouchMode="false"
                 android:paddingLeft="10dp"
                 android:id="@+id/update_bldng_houseName"
-                android:background="@drawable/round_edittext2"
+                android:background="@android:color/transparent"
                 android:layout_weight="2"
                 android:layout_width="0dp"
                 android:layout_marginRight="10dp"
-                android:layout_height="30dp"/>
+                android:layout_height="35dp"/>
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="37dp">
+
+            <TextView
+                android:textColor="@color/lightorange"
+                android:paddingLeft="5dp"
+                android:text="House Address:"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+            <EditText
+                android:textSize="15sp"
+                android:focusableInTouchMode="false"
+                android:paddingLeft="10dp"
+                android:id="@+id/update_bldng_houseAddress"
+                android:background="@android:color/transparent"
+                android:layout_weight="2"
+                android:layout_width="0dp"
+                android:layout_marginRight="10dp"
+                android:layout_height="35dp"/>
 
 
         </LinearLayout>
@@ -88,7 +119,96 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="30dp">
+            android:layout_height="37dp">
+
+            <TextView
+                android:textColor="@color/lightorange"
+                android:paddingLeft="5dp"
+                android:text="Flat Format:"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+            <EditText
+                android:focusableInTouchMode="false"
+                android:paddingLeft="10dp"
+                android:id="@+id/update_bldng_flatformat"
+                android:background="@android:color/transparent"
+                android:layout_weight="2"
+                android:layout_width="0dp"
+                android:layout_marginRight="10dp"
+                android:layout_height="35dp"/>
+
+
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="37dp">
+
+            <TextView
+                android:textColor="@color/lightorange"
+                android:paddingLeft="5dp"
+                android:text="Flat Per Floor:"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+            <EditText
+                android:focusableInTouchMode="false"
+                android:paddingLeft="10dp"
+                android:id="@+id/update_bldng_flatpfloor"
+                android:background="@android:color/transparent"
+                android:layout_weight="2"
+                android:layout_width="0dp"
+                android:layout_marginRight="10dp"
+                android:layout_height="35dp"/>
+
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="37dp">
+
+            <TextView
+                android:textColor="@color/lightorange"
+                android:paddingLeft="5dp"
+                android:text="Total Floor:"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"/>
+            <EditText
+
+                android:focusableInTouchMode="false"
+                android:paddingLeft="10dp"
+                android:id="@+id/update_bldng_totalfloor"
+                android:background="@android:color/transparent"
+                android:layout_weight="2"
+                android:layout_width="0dp"
+                android:layout_marginRight="10dp"
+                android:layout_height="35dp"/>
+
+
+        </LinearLayout>
+
+
+
+
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="37dp">
 
             <TextView
                 android:textColor="@color/lightorange"
@@ -98,13 +218,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
             <EditText
+                android:background="@drawable/round_edittext2"
+                android:focusableInTouchMode="false"
                 android:paddingLeft="10dp"
                 android:id="@+id/update_bldng_totalGuards"
-                android:background="@drawable/round_edittext2"
                 android:layout_weight="2"
                 android:layout_width="0dp"
                 android:layout_marginRight="10dp"
-                android:layout_height="30dp"/>
+                android:layout_height="35dp"/>
 
 
         </LinearLayout>
@@ -115,7 +236,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="30dp">
+            android:layout_height="37dp">
 
             <TextView
                 android:textColor="@color/lightorange"
@@ -125,13 +246,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
             <EditText
+                android:focusableInTouchMode="false"
                 android:paddingLeft="10dp"
                 android:id="@+id/update_bldng_bldngStatus"
                 android:background="@drawable/round_edittext2"
                 android:layout_weight="2"
                 android:layout_width="0dp"
                 android:layout_marginRight="10dp"
-                android:layout_height="30dp"/>
+                android:layout_height="35dp"/>
 
 
         </LinearLayout>
@@ -142,7 +264,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="20dp"
             android:layout_width="match_parent"
-            android:layout_height="30dp">
+            android:layout_height="37dp">
 
             <TextView
                 android:textColor="@color/lightorange"
@@ -159,26 +281,36 @@
                 android:layout_weight="2"
                 android:layout_width="0dp"
                 android:layout_marginRight="10dp"
-                android:layout_height="30dp"/>
+                android:layout_height="35dp"/>
 
 
         </LinearLayout>
 
+        <com.github.ybq.android.spinkit.SpinKitView
+
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/spin_kit"
+            style="@style/SpinKitView.Small.Wave"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:visibility="invisible"
+            app:SpinKit_Color="@color/colorAccent" />
+
 
         <Button
+            android:layout_marginBottom="20dp"
+            android:id="@+id/update_bldng_updatebtn"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="10dp"
             android:textColor="@color/white"
             android:textAllCaps="false"
             android:text="Update Information"
             android:background="@drawable/round_button"
             android:layout_width="match_parent"
-            android:layout_height="35dp"/>
-
-
-
-
+            android:layout_height="38dp"/>
 
 
     </LinearLayout>
