--- a/app/src/main/res/layout/fragment_myhome.xml
+++ b/app/src/main/res/layout/fragment_myhome.xml
@@ -27,8 +27,8 @@
                 <ImageView
                     android:layout_centerInParent="true"
                     android:src="@drawable/logo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"/>
 
                 <ImageView
                     android:id="@+id/logout_image"
