Set string value none and change database name

--- a/app/src/main/res/layout/element_bottom_navigation.xml
+++ b/app/src/main/res/layout/element_bottom_navigation.xml
@@ -5,7 +5,10 @@
         android:id="@+id/navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
+        app:itemIconTint="@color/orange"
+        app:itemTextColor="@color/orange"
+
+    android:background="?android:attr/windowBackground"
         app:menu="@menu/bottom_nav_menu"
         />
 
