--- a/app/src/main/res/layout/content_mainpage.xml
+++ b/app/src/main/res/layout/content_mainpage.xml
@@ -17,6 +17,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
+
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:visibility="gone"
+                android:id="@+id/pro"
+                />
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/guard"
                 android:layout_width="match_parent"
