--- a/app/src/main/res/layout/fragment_show_profile.xml
+++ b/app/src/main/res/layout/fragment_show_profile.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     >
 
-
     <RelativeLayout
         android:id="@+id/mainview"
         android:layout_width="match_parent"
@@ -35,7 +34,7 @@
 
 
                     <ImageView
-                        android:id="@+id/chat"
+                        android:id="@+id/logout"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="16dp"
@@ -62,10 +61,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.0" />
-
                 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
             </androidx.appcompat.widget.Toolbar>
 
