--- a/app/src/main/res/layout/fragment_myhome.xml
+++ b/app/src/main/res/layout/fragment_myhome.xml
@@ -91,7 +91,6 @@
                     android:layout_height="wrap_content"/>
 
                 <TextView
-
                     android:gravity="center_horizontal"
                     android:layout_toRightOf="@id/txtname"
                     android:layout_marginLeft="1dp"
@@ -103,7 +102,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
 
-
                 <LinearLayout
                     android:layout_marginTop="5dp"
                     android:id="@+id/layout_one"
@@ -111,7 +109,6 @@
                     android:layout_below="@id/txtname"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
-
 
                     <TextView
                         android:layout_gravity="center_vertical"
@@ -125,7 +122,6 @@
 
 
                     <TextView
-
                         android:layout_gravity="center_vertical"
                         android:paddingLeft="10dp"
                         android:textColor="@color/orange"
@@ -137,9 +133,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
-
                 </LinearLayout>
-
 
                 <LinearLayout
 
@@ -177,8 +171,6 @@
 
             </RelativeLayout>
 
-
-
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
@@ -188,7 +180,7 @@
         android:layout_margin="10dp"
         android:id="@+id/txt"
         android:layout_below="@id/myHomeFrag_cardview"
-        android:text="Buildings Covered So far:"
+        android:text="Buildings covered so far :"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
