--- a/app/src/main/res/layout/adress_list.xml
+++ b/app/src/main/res/layout/adress_list.xml
@@ -28,4 +28,11 @@
     </ListView>
 
 
+    <ProgressBar
+        android:id="@+id/progress_list"
+        android:layout_centerInParent="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
 </RelativeLayout>
