--- a/app/src/main/res/layout/activity_fworker_profile.xml
+++ b/app/src/main/res/layout/activity_fworker_profile.xml
@@ -47,13 +47,13 @@
             android:layout_height="110dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="80dp"
-            android:src="@drawable/maleone"
+            android:src="@color/grey_300"
             android:layout_alignParentTop="true"
             app:civ_border_color="@color/black"
             app:civ_border_width=".5dp" />
 
         <TextView
-            android:textColor="@color/grey"
+            android:textColor="@color/grey_2000"
             android:id="@+id/clickphototxt"
             android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true"
@@ -73,7 +73,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:layout_width="match_parent"
-            android:layout_height="36dp"/>
+            android:layout_height="45dp"/>
 
         <TextView
             android:id="@+id/addresstxt"
@@ -98,7 +98,7 @@
             android:layout_below="@id/addresstxt"
             android:background="@drawable/round_edittext2"
             android:layout_width="210dp"
-            android:layout_height="38dp"/>
+            android:layout_height="40dp"/>
 
         <ImageView
             android:visibility="gone"
@@ -122,7 +122,7 @@
             android:background="@drawable/round_edittext2"
             android:hint="road"
             android:layout_width="60dp"
-            android:layout_height="38dp"/>
+            android:layout_height="40dp"/>
 
         <EditText
 
@@ -136,8 +136,11 @@
             android:layout_toRightOf="@id/fworker_address_road"
             android:background="@drawable/round_edittext2"
             android:hint="block"
-            android:layout_width="60dp"
-            android:layout_height="38dp"/>
+            android:layout_width="wrap_content"
+            android:paddingStart="5dp"
+            android:paddingEnd="5dp"
+            android:minWidth="60dp"
+            android:layout_height="40dp"/>
 
         <TextView
             android:id="@+id/housetxt"
@@ -169,7 +172,7 @@
             android:layout_marginTop="15dp"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="10dp"
-            android:hint="letter."
+            android:hint="block"
             android:layout_below="@id/housetxt"
             android:layout_toRightOf="@id/fworker_address_housenmbr"
             android:id="@+id/fworker_address_roadletter"
@@ -187,12 +190,13 @@
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:layout_width="match_parent"
-            android:layout_height="36dp"/>
+            android:layout_height="45dp"/>
 
         <TextView
             android:id="@+id/getnumber_txt"
             android:paddingRight="10dp"
-            android:layout_marginTop="10dp"
+            android:textStyle="bold"
+            android:layout_marginTop="15dp"
             android:layout_alignRight="@id/fworker_phone_edit"
             android:layout_alignBottom="@id/fworker_phone_edit"
             android:layout_alignTop="@id/fworker_phone_edit"
@@ -221,6 +225,7 @@
         <TextView
             android:id="@+id/ref_knowMore_txt"
             android:paddingRight="10dp"
+            android:textStyle="bold"
             android:layout_marginTop="10dp"
             android:layout_alignRight="@id/fworker_refcode_edit"
             android:layout_alignBottom="@id/fworker_refcode_edit"
@@ -228,7 +233,7 @@
             android:textColor="@color/lightorange"
             android:text="know more"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="45dp"/>
 
 
 
@@ -244,7 +249,7 @@
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:layout_width="match_parent"
-            android:layout_height="36dp"/>
+            android:layout_height="45dp"/>
 
 
         <EditText
@@ -259,17 +264,18 @@
             android:layout_marginLeft="20dp"
             android:hint="Bkash acc"
             android:layout_width="match_parent"
-            android:layout_height="38dp"/>
+            android:layout_height="45dp"/>
 
         <TextView
             android:id="@+id/getbkashnumber_txt"
             android:paddingRight="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:layout_alignRight="@id/fworker_bkash_edit"
             android:layout_alignBottom="@id/fworker_bkash_edit"
             android:layout_alignTop="@id/fworker_bkash_edit"
             android:textColor="@color/lightorange"
             android:text="Get number"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -287,18 +293,19 @@
             android:layout_marginLeft="20dp"
             android:hint="Nogod acc"
             android:layout_width="match_parent"
-            android:layout_height="38dp"/>
+            android:layout_height="45dp"/>
 
 
         <TextView
             android:id="@+id/getnogodhnumber_txt"
             android:paddingRight="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:layout_alignRight="@id/fworker_nogod_edit"
             android:layout_alignBottom="@id/fworker_nogod_edit"
             android:layout_alignTop="@id/fworker_nogod_edit"
             android:textColor="@color/lightorange"
             android:text="Get number"
+            android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
@@ -339,7 +346,7 @@
             android:background="@drawable/round_edittext2"
             android:layout_below="@id/fworker_dob_edit"
             android:layout_width="match_parent"
-            android:layout_height="36dp"/>
+            android:layout_height="45dp"/>
 
         <EditText
             android:inputType="textEmailAddress"
@@ -352,7 +359,7 @@
             android:background="@drawable/round_edittext2"
             android:layout_below="@id/fworker_uni_edit"
             android:layout_width="match_parent"
-            android:layout_height="36dp"/>
+            android:layout_height="45dp"/>
 
         <EditText
             android:visibility="gone"
@@ -365,7 +372,7 @@
             android:background="@drawable/round_edittext2"
             android:layout_below="@id/fworker_mail_edit"
             android:layout_width="match_parent"
-            android:layout_height="36dp"/>
+            android:layout_height="45dp"/>
 
         <ImageView
             android:visibility="gone"
@@ -413,10 +420,10 @@
             android:text="Create Profile"
             android:id="@+id/fworker_data_btn"
             android:textColor="@color/white"
-            android:backgroundTint="@color/lightorange"
+            android:backgroundTint="@color/orange"
             android:background="@drawable/round_edittext"
             android:layout_width="match_parent"
-            android:layout_height="38dp"/>
+            android:layout_height="45dp"/>
 
 
         <com.github.ybq.android.spinkit.SpinKitView
