--- a/app/src/main/res/layout/content_mainpage.xml
+++ b/app/src/main/res/layout/content_mainpage.xml
@@ -191,6 +191,7 @@
                     android:layout_gravity="center"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
+                    android:id="@+id/due_earningrel"
                     android:background="@drawable/round_background_white"
                     android:gravity="center">
 
@@ -211,7 +212,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/visitor"
+                        android:layout_below="@+id/due_earning"
                         android:layout_centerHorizontal="true"
                         android:text="Due earning"
                         android:layout_marginBottom="10dp"
